# feishukit

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
codegen/: __init__.py  config.py  gen.py  main.py  models.py  source.py  utils.py
codegen/parser/: __init__.py  consts.py  models.py  utils.py
codegen/templates/client/: _param.py.jinja  _request.py.jinja  client.py.jinja
codegen/templates/namespace/: namespace.py.jinja
feishukit/: __init__.py  config.py  core.py  exception.py
feishukit/rest/: __init__.py  acs.py  admin.py  ai.py  application.py  approval.py  attendance.py  authen.py  baike.py  calendar.py  ccm.py  contact.py  credential.py  ehr.py  event.py  feishu_people.py  helpdesk.py  hire.py  human_authentication.py  im.py  mail.py  okr.py  passport.py  search.py  task.py  tenant.py  vc.py  verification_information.py
